src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Petition_Program__c</fullName>
        <description>The Program selected on the Academic Petition form.</description>
        <inlineHelpText>The Program the student selected on the Academic Petition wufoo form.</inlineHelpText>
        <label>Petition Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Type__c</fullName>
        <description>Populated from a field on the Academic Petition Wufoo form.</description>
        <label>Petition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appeal - Academic Dismissal</fullName>
                </value>
                <value>
                    <fullName>Exception - Complete degree requirements from prior catalog year</fullName>
                </value>
                <value>
                    <fullName>Exception - Extension of time on credit expiration</fullName>
                </value>
                <value>
                    <fullName>Exception - Extension of time to complete degree</fullName>
                </value>
                <value>
                    <fullName>Exception - Grade Change</fullName>
                </value>
                <value>
                    <fullName>Exception - Late Add</fullName>
                </value>
                <value>
                    <fullName>Exception - Late drop without refund request</fullName>
                </value>
                <value>
                    <fullName>Exception - Late drop with refund request</fullName>
                </value>
                <value>
                    <fullName>Exception - Other academic policy</fullName>
                </value>
                <value>
                    <fullName>Exception - Required course or independent study substitution</fullName>
                </value>
                <value>
                    <fullName>Exception - Withdrawal past deadline without refund request</fullName>
                </value>
                <value>
                    <fullName>Exception - Withdrawal past deadline with refund request</fullName>
                </value>
                <value>
                    <fullName>Exception - Residency requirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phonetic_Pronunciation__c</fullName>
        <description>Populated from the Commencement Application Wufoo Form</description>
        <label>Phonetic Pronunciation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Case_Number__c</fullName>
        <description>This field is for migration to reference the old case number</description>
        <inlineHelpText>This field is population by the migration process. Should not be need after the migration.</inlineHelpText>
        <label>Previous Case Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies the previous id if it exists</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Academic_Dismissal__c</fullName>
        <description>Populated by an advisor to give context to the Case.</description>
        <label>Prior Academic Dismissal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Academic_Probation__c</fullName>
        <description>Populated by an advisor to give context to the Case.</description>
        <label>Prior Academic Probation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Being_Replaced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Being Replaced</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Code_Being_Replaced__c</fullName>
        <description>to use temporarily for migration</description>
        <label>Program Code Being Replaced</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Group_Name_Text__c</fullName>
        <description>Used primarily for New or Edit Program requests, this field allows new Program Groups that do not exist in SF to be entered.</description>
        <inlineHelpText>Program Group this Program belongs to</inlineHelpText>
        <label>Program Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Group_Name__c</fullName>
        <description>Looks up Program Group from related Program.</description>
        <formula>Program__r.Program_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated if Program is filled in.</inlineHelpText>
        <label>Program Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Program)</relationshipLabel>
        <relationshipName>CaseProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programs_to_Include__c</fullName>
        <label>Program Codes to Include</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registrar_Summary__c</fullName>
        <description>Populated by the Registrar to give context to the Case</description>
        <label>Registrar Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the related application.</inlineHelpText>
        <label>Related Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Cases (Related Application)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Requirements_Detail__c</fullName>
        <label>Remaining Requirements Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remaining_Requirements__c</fullName>
        <label>Remaining Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_for_Information_Program__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Request for Information - Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_for_Information__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Request for Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <description>The date the user is requesting to have this case completed by.</description>
        <inlineHelpText>Please enter the date you&apos;d like this case completed by. Must be 3-5 business days in the future.</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Description__c</fullName>
        <description>A description of why the choice was made for this appeals case.</description>
        <label>Resolution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Academic Dismissal</fullName>
                </value>
                <value>
                    <fullName>Changed Care Area</fullName>
                </value>
                <value>
                    <fullName>Changed Cohort</fullName>
                </value>
                <value>
                    <fullName>Changed Major</fullName>
                </value>
                <value>
                    <fullName>Enrollment Dropped - All</fullName>
                </value>
                <value>
                    <fullName>Enrollment Dropped - Course</fullName>
                </value>
                <value>
                    <fullName>No further action taken at this time</fullName>
                </value>
                <value>
                    <fullName>Readmitted</fullName>
                </value>
                <value>
                    <fullName>Referred to another department</fullName>
                </value>
                <value>
                    <fullName>Repeating Course</fullName>
                </value>
                <value>
                    <fullName>Schedule Change</fullName>
                </value>
                <value>
                    <fullName>Schedule Sent</fullName>
                </value>
                <value>
                    <fullName>Student is Participating in Course Now</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>Withdrawal from Bethel</fullName>
                </value>
                <value>
                    <fullName>Withdrawal from Course</fullName>
                </value>
                <value>
                    <fullName>Approved with modification</fullName>
                </value>
                <value>
                    <fullName>Approved to commence</fullName>
                </value>
                <value>
                    <fullName>Not approved to commence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Used for Academic Petitions to state Decision Maker&apos;s role</description>
        <inlineHelpText>Decision Maker&apos;s Role at Bethel</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Program Director</fullName>
                </value>
                <value>
                    <fullName>Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSA_Summary__c</fullName>
        <description>Field for Academic Petitions</description>
        <inlineHelpText>1. Date of determination. 
2. Verified last date of participation. 
3. Briefly summarize petition and provide any information related to decision time frame, consequences, options available to the student, etc.</inlineHelpText>
        <label>SSA Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Tasks_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked once the trigger for creating SSR Tasks runs. It runs when the Case is moved from a Queue to a User, creates the tasks, and then checks this box. Tasks will not be created again if the Case is moved back to a Queue and then to a different User.</description>
        <label>SSR Tasks Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a the sample user that this user should be setup like.</description>
        <label>Sample User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the second application.</inlineHelpText>
        <label>Second Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Cases (Second Application)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the second contact.</inlineHelpText>
        <label>Second Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Second Contact)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Date__c</fullName>
        <label>Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Details_to_Include__c</fullName>
        <description>Used for Segment Mailing List requests</description>
        <label>Stage Details to Include</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stage_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Notification_URL__c</fullName>
        <description>URL for Student to view their appeals case</description>
        <formula>$Setup.Bethel_Settings__c.Public_Domain_URL__c + &quot;appeals/apex/AcademicPetitionStudentView?ID=&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>URL for Student View of Appeals Case</inlineHelpText>
        <label>Student Notification URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Stakeholder, if not the Contact. This is where Old Org Request Owners are migrated to.</description>
        <label>Stakeholder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>notEqual</operation>
                <value>API-Oracle Integration, API-Oracle Replication, Applicant Community Login User, Chatter External User, Chatter Free User, Chatter Moderator User, Contract Manager, Customer Community Login User, Guest License User</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>SubmittedCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporting_Documentation2__c</fullName>
        <label>Supporting Documentation2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Supporting_Documentation3__c</fullName>
        <label>Supporting Documentation3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Supporting_Documentation4__c</fullName>
        <label>Supporting Documentation4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>Related_Opportunity__r.Academic_Term__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please enter the term.</inlineHelpText>
        <label>Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_of_registration__c</fullName>
        <label>Term of registration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Available__c</fullName>
        <description>Terms Application should be turned on for this new program</description>
        <inlineHelpText>Terms Application should be turned on for this new program</inlineHelpText>
        <label>Terms Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_to_include__c</fullName>
        <label>Terms to include</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAS - Fall (Seniors)</fullName>
                </value>
                <value>
                    <fullName>CAS - Interim/Spring</fullName>
                </value>
                <value>
                    <fullName>CAS - Juniors</fullName>
                </value>
                <value>
                    <fullName>CAS - Sophomores</fullName>
                </value>
                <value>
                    <fullName>Other - List in Comments</fullName>
                </value>
                <value>
                    <fullName>Adult - Current &amp; Future</fullName>
                </value>
                <value>
                    <fullName>Adult - 3yrs Back &amp; Future</fullName>
                    <isActive>false</isActive>
                    <label>Adult - 3yrs Back &amp; Future</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thesis_Title__c</fullName>
        <description>Populated from a field on the Commencement Application Wufoo form.</description>
        <label>Thesis Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Used to state Title of a user at Bethel</description>
        <inlineHelpText>Job Title or Role at Bethel</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Student_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Student Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Region__c</fullName>
        <label>Zip Code Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>50 mile radius</fullName>
                </value>
                <value>
                    <fullName>100 mile radius</fullName>
                </value>
                <value>
                    <fullName>150 mile radius</fullName>
                </value>
                <value>
                    <fullName>Only MN Zips</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>approval_academic_year__c</fullName>
        <description>Academic year catalog the student may use to complete course requirements</description>
        <inlineHelpText>Student may complete requirements listed in the catalog for academic year:</inlineHelpText>
        <label>Approval - Academic Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approval_course_substitution__c</fullName>
        <description>Approve substitution of requested course for course requirement (list)</description>
        <inlineHelpText>Approve substitution of requested course for course requirement (list)</inlineHelpText>
        <label>Approval - Course Substitution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>approval_details__c</fullName>
        <description>Combines all the Approval and Denial fields into one text field.</description>
        <formula>if(
				text(Approval_Description__c) &lt;&gt; &quot;&quot;, 
				text(Approval_Description__c) &amp; if(grace_grant_amount__c &lt;&gt; &quot;&quot;, &quot; in the amount of:&quot; &amp; grace_grant_amount__c, &quot;&quot;), 
				&quot;&quot;
) 

&amp;
if(
				approval_old_grade__c &lt;&gt; &quot;&quot;, 
				&quot;Change grade from &quot; &amp; approval_old_grade__c &amp; &quot; to &quot; &amp; approval_new_grade__c &amp; &quot;, because: &quot; &amp; Comments__c, 
				&quot;&quot;
) 

&amp;
if(approval_academic_year__c &lt;&gt; &quot;&quot;, 
				&quot;Student may complete requirements listed in the catalog for academic year: &quot; &amp; approval_academic_year__c, 
				&quot;&quot;
) 
&amp;

if(isblank(approval_extension_date__c) = FALSE, 
			&quot;Approve extension until: &quot; &amp; text(approval_extension_date__c), 
			&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approval_extension_date__c</fullName>
        <description>Date an appealed extension is approved until</description>
        <inlineHelpText>Date an appealed extension is approved until</inlineHelpText>
        <label>Approval - Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>approval_new_grade__c</fullName>
        <description>New grade for appeal</description>
        <inlineHelpText>Change grade to</inlineHelpText>
        <label>Approval - New Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approval_old_grade__c</fullName>
        <description>Current grade being appealed</description>
        <inlineHelpText>Change grade from</inlineHelpText>
        <label>Approval - Old Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grace_grant_amount__c</fullName>
        <description>Partial tuition being issued for a grace grant</description>
        <inlineHelpText>Issue grace grant for partial tuition in the amount of</inlineHelpText>
        <label>Approval - Grace Grant Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grade_change_factors__c</fullName>
        <description>Factors justifying a grade change</description>
        <inlineHelpText>Factors justifying a grade change</inlineHelpText>
        <label>Approval - Grade Change Factors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Late work accepted by professor</fullName>
                </value>
                <value>
                    <fullName>Late withdrawal allowed - grade changed to “W”</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>heda_program_formula__c</fullName>
        <formula>Related_Application__r.Intended_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intended Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update_old_code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if opportunities with old program need to be updated to the New program beginning with the start term of program.</description>
        <inlineHelpText>Check if opportunities with old program need to be updated to the New program beginning with the start term of program</inlineHelpText>
        <label>Update Old Code</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Closed_This_Week</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Closed This Week</label>
    </listViews>
    <listViews>
        <fullName>EMOps_Requests_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>EMOps - Requests</label>
        <queue>EMOps_Requests</queue>
        <sharedTo>
            <group>EMOps</group>
            <role>ITS_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITS_Data_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>ITS - Data Team</label>
        <queue>ITS_Data_Team</queue>
        <sharedTo>
            <group>ITS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITS_Processing_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>ITS - Processing</label>
        <queue>ITS_Processing</queue>
        <sharedTo>
            <group>ITS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITS_Requests_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Submitted_By__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>ITS - Requests</label>
        <queue>ITS_Requests</queue>
        <sharedTo>
            <group>ITS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Cases_ITS</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Submitted_By__c</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases (ITS)</label>
        <sharedTo>
            <group>ITS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Endeveran_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Submitted_By__c</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Matthew Steiner,Jim Casazza,Todd Mitchell,Luke Vang</value>
        </filters>
        <label>Open Endeveran Cases</label>
        <sharedTo>
            <group>ITS</group>
            <group>Vendor_Endeveran</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_ITS_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.ITS_Access,Case.ITS_General_Request</value>
        </filters>
        <label>Open ITS Cases</label>
        <sharedTo>
            <group>ITS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SSR_Advising_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>NAME</columns>
        <columns>Academic_Program_Division__c</columns>
        <columns>Program__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>SSR - Advising</label>
        <queue>SSR_Advising</queue>
        <sharedTo>
            <group>Student_Success</group>
            <role>ITS_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SSR_Experience_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Academic_Program_Division__c</columns>
        <columns>Program__c</columns>
        <filterScope>Queue</filterScope>
        <label>SSR - Experience</label>
        <queue>SSR_Experience</queue>
        <sharedTo>
            <group>Student_Success</group>
            <role>ITS_Analyst</role>
        </sharedTo>
    </listViews>
</CustomObject>